# OshiSpoofer

OshiSpoofer/: CMakeLists.txt  main.c
OshiSpoofer/include/jni/: jvmti.h
